--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="script.js" type="module"></script>
+    <script src="/src/js/script.js" type="module"></script>
   </body>
 </html>
