--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/src/js/script.js" type="module"></script>
+    <script src="/src/js/task-1.js" type="module"></script>
+    <script src="/src/js/task-2.js" type="module"></script>
+
+    <script src="/src/js/task-3.js" type="module"></script>
+
+    <script src="/src/js/task-4.js" type="module"></script>
   </body>
 </html>
